src_old/objects/ImportRequestQueueItem__c.object
<CustomObject>
    <description>Import request queue item</description>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchJobAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>the batch job is assigned</description>
        <label>BatchJobAssigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchJobId__c</fullName>
        <description>batch job id</description>
        <label>BatchJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerAppClassName__c</fullName>
        <formula>Queue__r.Datasource__r.ConsumerApexClass__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConsumerAppClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <description>Data Source ID</description>
        <formula>Queue__r.Datasource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Datasource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorAttachment__c</fullName>
        <description>Error attachment ID</description>
        <label>Error Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorCount__c</fullName>
        <label>ErrorCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LockProject__c</fullName>
        <formula>Queue__r.Datasource__r.LockProject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LockProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Parentss</relationshipLabel>
        <relationshipName>Parents_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queue</label>
        <referenceTo>ImportRequestQueue__c</referenceTo>
        <relationshipLabel>Queues</relationshipLabel>
        <relationshipName>Queue_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordCount__c</fullName>
        <label>RecordCount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>Queue__r.Requestor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RetryCount__c</fullName>
        <label>Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>queue item status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuccessCount__c</fullName>
        <label>SuccessCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ImportRequestQueueItem</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>ImportRequestQueueItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ImportRequestQueueItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>